--- a/DeviceSettings/AndroidManifest.xml
+++ b/DeviceSettings/AndroidManifest.xml
@@ -25,10 +25,8 @@
     <uses-permission android:name="android.permission.INJECT_EVENTS"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="lineageos.permission.HARDWARE_ABSTRACTION_ACCESS" />
 
-    <protected-broadcast android:name="org.lineageos.device.DeviceSettings.UPDATE_SLIDER_SETTINGS" />
-    <protected-broadcast android:name="org.lineageos.device.DeviceSettings.UPDATE_SLIDER_POSITION" />
+    <protected-broadcast android:name=">org.lineageos.device.DeviceSettings.UPDATE_SLIDER_POSITION" />
 
     <uses-sdk
         android:minSdkVersion="24" />
@@ -36,9 +34,7 @@
     <application
         android:icon="@drawable/ic_settings_device"
         android:label="@string/device_title"
-        android:theme="@style/AppTheme"
-        android:defaultToDeviceProtectedStorage="true"
-        android:directBootAware="true">
+        android:theme="@style/AppTheme">
 
         <!-- Device Settings -->
         <activity
@@ -62,12 +58,6 @@
 
         <activity android:name=".DeviceSettings" />
         <activity android:name=".KeyHandler" />
-
-        <receiver android:name=".Startup" >
-            <intent-filter>
-                <action android:name="lineageos.intent.action.INITIALIZE_LINEAGE_HARDWARE" />
-            </intent-filter>
-        </receiver>
 
         <!-- Search Provider -->
         <provider
